@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Configure rates
skinparam class {
 BorderColor #344054
 FontColor #101828
 BackgroundColor #F9FAFB
}
class RateConfiguration {
 +Guid Id
 +string Currency = CAD
 +long Revision
 +SetRate(key: string, amount: decimal): void
}
class ConfiguredRate {
 +string Key
 +BillingUnit Unit
 +decimal? Amount
}
RateConfiguration "1" *-- "0..*" ConfiguredRate : Owned configuration entry
interface IStudioStore {
 +Run<T>(lockKey, action): Task<T>
}
interface IStudioTransaction {
 +Get<T>(id): Task<T?>
 +List<T>(): Task<T[]>
 +Save<T>(value, expectedVersion): Task
}
IStudioStore ..> IStudioTransaction : scopes one committed unit of work
IStudioStore o-- RateConfiguration : persists or supplies inputs
@enduml
